# tarantool_benchrs

./: Cargo.toml  Makefile  init.lua
src/: bench.rs  lib.rs  rnd.rs  space.rs  stat.rs
src/benches/: mod.rs
src/benches/update_column/: mod.rs
src/benches/update_column/artifacts/: copy_results.txt  splice_results.txt
