[package]
name = "update_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarantool = "4.0.1"
field_count = "0.1"
rmp-serde = "1.0.0"
serde_bytes = "0.11"
rand = "0.8.5"

[dependencies.rmp]
version = "=0.8.11"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[lib]
crate-type = ["dylib", "rlib"]

